--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap');
+
+:root {
+  --primary-color: #800000; 
+  --background-color: E5E5E5; 
+  --text-color1: #333; 
+  --text-corlor2: #fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  font-family: "Mulish", sans-serif;
+  color: var(--text-color1);
+}
+
+.navbar {
+  display: flex;
+  margin-top: 56px;
+  background-color: var(--primary-color);
+  height: 56px;
+}
+
+.navbar div {
+  width: 33.333%;
+  text-align: center;
+  line-height: 56px;
+}
+
+.navbar a {
+  display: inline-block;
+  width: 100%;
+  color: var(--text-corlor2);
+  text-decoration: none;
+  font-size: 20px
 }
