--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,7 @@ body {
   box-sizing: border-box;
   padding: 10px 12px;
   border-radius: 15px;
-  margin-left: 21px;
-  margin-bottom: 12px;
+  margin: 30px 20px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
