--- a/src/index.css
+++ b/src/index.css
@@ -117,5 +117,12 @@ a {
 
 /* Review */
 
+.reviewcomp {
+  background-color: white;
+  border-radius: 15px;
+  width: 90vw;
+  padding: 10px;
+}
+
 /* AddReview */
 
