--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,19 @@ body {
   -o-border-radius: 15px;
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.buttons button {
+  font-size: 20px;
+  height: 45px;
+  width: 150px;
+  margin: 10px;
+  border-radius: 15px;
+}
+
 /* Login and Register */
 .flexcenter {
   display: flex;
