--- a/src/index.css
+++ b/src/index.css
@@ -52,12 +52,12 @@ body {
   width: 150px;
   box-sizing: border-box;
   padding: 10px 12px;
-  border-radius: 15px;
+  border-radius: 5px;
   margin: 30px 20px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
 .buttons {
@@ -70,7 +70,26 @@ body {
   height: 45px;
   width: 150px;
   margin: 10px;
-  border-radius: 15px;
+  border-radius: 50px;
+  color: var(--primary-color);
+  background-color: var(--background-color2);
+  border: 1px solid var(--primary-color);
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+.buttons button.active {
+  background-color: var(--primary-color);
+  color: var(--text-corlor2);
+}
+
+.menu-name {
+  font-weight: bold;
+  color: var(--primary-color);
+  margin: 12px auto;
+  text-align: center;
 }
 
 /* Login and Register */
