--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,35 @@ a {
 }
 
 /* Search */
+.main .search-input {
+  background-color: var(--background-color2);
+  height: 30px;
+  width: 95%;
+  box-sizing: border-box;
+  padding: 12px;
+  border-radius: 5x;
+  -webkit-border-radius: 5x;
+  -moz-border-radius: 5x;
+  -ms-border-radius: 5x;
+  -o-border-radius: 5x;
+}
+
+.search-button {  
+  margin-left: -78px;
+  width: 72px;
+  height: 23px;
+  background-color: var(--primary-color);
+  color: white;
+  text-align: center;
+  border-radius: 5px;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+
 
 /* Review */
 
