--- a/src/index.css
+++ b/src/index.css
@@ -94,10 +94,12 @@ body {
 
 .dish {
   background-color: var(--background-color2);
+  box-sizing: border-box;
   border-radius: 5px;
-  width: 351px;
+  width: 350px;
+  height: 100px;
   padding: 10px;
-  margin: 10px;
+  margin: 10px auto;
 }
 
 /* Login and Register */
